<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".Login">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="311dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/name"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        style="@style/Form" />

    <EditText
        android:id="@+id/surname"
        android:hint="Apellidos"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        style="@style/Form"/>

    <EditText
        android:id="@+id/user_name"
        android:hint="@string/user_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname"
        style="@style/Form"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="48dp"
        android:background="@drawable/border_radius"
        android:text="@string/siguiente"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next"
        android:layout_marginTop="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
