<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".Register2">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="186dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/img"
        app:civ_border_color="#FF000000"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_bias="0.014" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/prompt_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/profile_image"
        style="@style/Form" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/prompt_password"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        style="@style/Form"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="start"
        android:layout_marginTop="48dp"
        android:background="@drawable/border_radius"
        android:text="@string/creat_account"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/go_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_back"
        android:textColor="@color/black"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next"
        android:layout_marginTop="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
